update spark scripts